[BPK-2812]: Patch for spacing issues (#1631)

--- a/packages/bpk-component-rating/src/BpkRating.scss
+++ b/packages/bpk-component-rating/src/BpkRating.scss
@@ -56,11 +56,18 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    &--horizontal {
+      padding-left: $bpk-spacing-sm;
+    }
+
+    &--vertical {
+      padding-top: $bpk-spacing-xs;
+    }
   }
 
   &__text {
     &--horizontal {
-      padding-left: $bpk-spacing-sm;
       text-align: left;
     }
 
